added events in nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,10 @@
+
+events {
+        worker_connections 4096;
+        # multi_accept on;
+}
+
+
 http{
   server {
     server_name local.hiremonk;
@@ -17,12 +24,12 @@ http{
     index index.html;
     
     location ^~ / {
-      proxy_pass      localhost:9000;
+      proxy_pass      http://localhost:9000;
       proxy_set_header Host $host;
     }
 
     location ^~ /api/0/profile {
-      proxy_pass      localhost:8000;
+      proxy_pass      http://localhost:8000;
       proxy_set_header Host $host;
     }
 
