updated webapp application to include gulp and delete grunt

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,34 +1,28 @@
+worker_processes 4;
+pid /var/run/nginx.pid;
+
 
 events {
         worker_connections 4096;
         # multi_accept on;
 }
 
-
 http{
-  server {
-    server_name local.hiremonk;
-    rewrite     / $scheme://www.local.hiremonk$request_uri? permanent;
-  }
 
   server {
 
-    server_name www.local.hiremonk;
+    server_name local.hiremonk www.local.hiremonk;
+    listen 80;
 
-    set $srv_base   "/mnt";
-
-    sendfile off;
-    ssi  on;
-
-    root  $srv_base/webapp/app;
-    index index.html;
+    sendfile on;
     
-    location ^~ / {
-      proxy_pass      http://localhost:9000;
+    location / {
+      #proxy_pass      http://localhost:9000;
+      alias     /mnt/webapp/app/;
       proxy_set_header Host $host;
     }
 
-    location ^~ /api/0/profile {
+    location ~ ^/profile {
       proxy_pass      http://localhost:8000;
       proxy_set_header Host $host;
     }
