--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-node_modules
-dist
-.tmp
-.sass-cache
-bower_components
+"ignore": [
+  "**/.*",
+  "node_modules",
+  "app/bower_components",
+  "test",
+  "tests"
+],
