--- a/package.json
+++ b/package.json
@@ -1,41 +1,32 @@
 {
   "name": "webapp",
-  "version": "0.0.0",
-  "dependencies": {},
-  "devDependencies": {
-    "grunt": "^0.4.1",
-    "grunt-autoprefixer": "^0.7.3",
-    "grunt-concurrent": "^0.5.0",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-concat": "^0.4.0",
-    "grunt-contrib-connect": "^0.7.1",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-cssmin": "^0.9.0",
-    "grunt-contrib-htmlmin": "^0.3.0",
-    "grunt-contrib-imagemin": "^0.7.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-filerev": "^0.2.1",
-    "grunt-google-cdn": "^0.4.0",
-    "grunt-karma": "^0.8.3",
-    "grunt-newer": "^0.7.0",
-    "grunt-nginx": "^0.2.2",
-    "grunt-ngmin": "^0.0.3",
-    "grunt-svgmin": "^0.4.0",
-    "grunt-usemin": "^2.1.1",
-    "grunt-wiredep": "^1.7.0",
-    "jshint-stylish": "^0.2.0",
-    "karma": "^0.12.23",
-    "karma-jasmine": "^0.1.5",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "load-grunt-tasks": "^0.4.0",
-    "time-grunt": "^0.3.1"
-  },
-  "engines": {
-    "node": ">=0.10.0"
-  },
+  "version": "1.0.0",
+  "description": "hiremonk webapp",
+  "main": "gulpfile.js",
   "scripts": {
-    "test": "grunt test"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/HireMonk/webapp.git"
+  },
+  "keywords": [
+    "hiremonk",
+    "webapp"
+  ],
+  "author": "chethan",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/HireMonk/webapp/issues"
+  },
+  "homepage": "https://github.com/HireMonk/webapp",
+  "dependencies": {
+    "bower": "^1.3.12",
+    "gulp": "^3.8.8",
+    "gulp-connect": "^2.0.6",
+    "gulp-jshint": "^1.8.5",
+    "gulp-minify-css": "^0.3.10",
+    "gulp-rimraf": "^0.1.0",
+    "gulp-uglify": "^1.0.1"
   }
 }
