--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-"ignore": [
-  "**/.*",
-  "node_modules",
-  "app/bower_components",
-  "test",
-  "tests"
-],
+**/.*
+node_modules
+app/bower_components
