updated grunt files and basic structure

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,31 +1,18 @@
-worker_processes 4;
-pid /var/run/nginx.pid;
+server {
 
+  server_name localhost www.localhost;
+  listen 8080;
 
-events {
-        worker_connections 4096;
-        # multi_accept on;
-}
+  sendfile on;
 
-http{
-
-  server {
-
-    server_name local.hiremonk www.local.hiremonk;
-    listen 80;
-
-    sendfile on;
-    
-    location / {
-      #proxy_pass      http://localhost:9000;
-      alias     /mnt/webapp/app/;
-      proxy_set_header Host $host;
-    }
-
-    location ~ ^/profile {
-      proxy_pass      http://localhost:8000;
-      proxy_set_header Host $host;
-    }
-
+  location ~ ^/home {
+    proxy_pass      http://localhost:9000;
+    proxy_set_header Host $host;
   }
+
+  location ~ ^/ {
+    proxy_pass      http://localhost:8000;
+    proxy_set_header Host $host;
+  }
+
 }
