--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
   "dependencies": {
     "bower": "^1.3.12",
     "gulp": "^3.8.8",
+    "gulp-browserify": "^0.5.0",
+    "gulp-concat": "^2.4.1",
     "gulp-connect": "^2.0.6",
     "gulp-jshint": "^1.8.5",
     "gulp-minify-css": "^0.3.10",
     "gulp-rimraf": "^0.1.0",
-    "gulp-uglify": "^1.0.1"
+    "gulp-uglify": "^1.0.1",
+    "rimraf": "^2.2.8"
   }
 }
