--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,7 @@ server {
 
   sendfile on;
 
-  location ~ ^/home {
+  location ~ ^/api/0/ {
     proxy_pass      http://localhost:9000;
     proxy_set_header Host $host;
   }
