--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "homepage": "https://github.com/HireMonk/webapp",
   "dependencies": {
+    "angular": "^1.2.23",
+    "angular-animate": "^1.2.23",
+    "angular-route": "^1.2.17-build.163.1",
     "bower": "^1.3.12",
     "gulp": "^3.8.8",
     "gulp-browserify": "^0.5.0",
